--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + HeroUI</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
+    <title>re-write — a personal blog</title>
+    <meta key="title" content="re-write — a personal blog" property="og:title" />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="re-write is a personal blog that explores various topics, including technology, design, and personal experiences. Join me on this journey of discovery and creativity."
       property="og:description"
     />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="re-write is a personal blog that explores various topics, including technology, design, and personal experiences. Join me on this journey of discovery and creativity."
       name="description"
     />
     <meta
